--- a/website/index.html
+++ b/website/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>IBM Systems Lab Services - UK&I </title>
+	<title>IBM Systems Lab Services  </title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
